<resources>
    <!-- General -->
    <string name="app_name">StudyBuddy</string>
    <string name="go_back">Go Back</string>

    <!-- LoginActivity -->
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">Log In</string>
    <string name="authentication_error">Wrong email or password</string>
    <string name="invalid_email">Your email address is invalid</string>
    <string name="email_already_in_use">This email address is already in use</string>
    <string name="password_too_short">Your password must be 8 characters long</string>
    <string name="invalid_credentials">Enter a valid email and password</string>

    <!-- OverviewActivity -->
    <string name="delete_title">Delete Course</string>
    <string name="delete_message_course">Are you sure you want to delete this course?</string>

    <string name="recover_title">Recover Course</string>
    <string name="recover_message_course">Do you want to recover this course?</string>

    <string name="share_title">Share Course</string>
    <string name="share_message_course">Your share Code is: %1$s</string>

    <!-- AddCourseActivity -->
    <string name="course_name">Course Name</string>
    <string name="course_description">Course Description</string>
    <string name="exam_date">Exam Date</string>
    <string name="add_course">Add Course</string>
    <string name="all_input_fields">All input fields have to be filled</string>
    <string name="delete_message_card">Are you sure you want to delete this card?</string>

    <!-- CourseOverviewActivity -->
    <string name="save_course">Save Course</string>
    <string name="play_course">Play</string>
    <string name="edit_course">Edit</string>

    <!-- AddCardActivity -->
    <string name="share_code">Share Code</string>
    <string name="front_text">Front Text</string>
    <string name="back_text">Back Text</string>
    <string name="playMenuItem">PlayMenuItem</string>
    <string name="play_course_action_text">Play Course</string>
    <string name="share_action_text">Share</string>
    <string name="add_card_action_text">Add Card</string>
    <string name="shareMenuItem">shareMenuItem</string>
    <string name="ParentMenuButton">ParentMenuButton</string>
    <string name="addCardMenuItem">AddCardMenuItem</string>
    <string name="add_shared_course">Redeem Share Code</string>
    <string name="add_new_course">Add Course</string>
    <string name="addCourseMenuItem">addMenuItem</string>
    <string name="recycle_bin_text">Recycle Bin</string>
    <string name="title_activity_recycle_bin">RecycleBinActivity</string>

</resources>