<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.activity.CourseOverviewActivity">

    <LinearLayout
        android:id="@+id/headerFieldLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/app_name"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:id="@+id/imageViewLogin"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginEnd="18dp"
            android:contentDescription="@string/app_name"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/loginHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="30sp" />
    </LinearLayout>

    <EditText
        android:id="@+id/editTextCourseName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="0"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/course_name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/headerFieldLogin"
        tools:ignore="SpeakableTextPresentCheck" />

    <EditText
        android:id="@+id/editTextCourseDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="password"
        android:ems="10"
        android:enabled="true"
        android:hint="@string/course_description"
        android:inputType="text"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseName" />

    <EditText
        android:id="@+id/editTextExamDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:autofillHints="password"
        android:ems="10"
        android:enabled="true"
        android:focusable="false"
        android:hint="@string/exam_date"
        android:inputType="date"
        android:maxWidth="488dp"
        android:minHeight="48dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCourseDescription" />

    <Button
        android:id="@+id/buttonSaveCourse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:enabled="true"
        android:text="@string/save_course"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextExamDate" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        app:layout_constrainedHeight="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonSaveCourse" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/jordy_blue"
        android:src="@drawable/baseline_more_horiz_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/ParentMenuButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/play_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/jordy_blue"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_fab"
        app:layout_constraintStart_toStartOf="@+id/add_fab"
        app:srcCompat="@drawable/baseline_play_arrow_24"
        android:contentDescription="@string/playMenuItem" />

    <TextView
        android:id="@+id/play_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/play_course_action_text"
        app:layout_constraintBottom_toBottomOf="@+id/play_fab"
        app:layout_constraintEnd_toStartOf="@+id/play_fab"
        app:layout_constraintTop_toTopOf="@+id/play_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_card_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/jordy_blue"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/play_fab"
        app:layout_constraintEnd_toEndOf="@+id/play_fab"
        app:layout_constraintStart_toStartOf="@+id/play_fab"
        app:srcCompat="@drawable/baseline_add_24"
        android:contentDescription="@string/addCardMenuItem" />

    <TextView
        android:id="@+id/add_card_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_card_action_text"
        app:layout_constraintBottom_toBottomOf="@+id/add_card_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_card_fab"
        app:layout_constraintTop_toTopOf="@+id/add_card_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/jordy_blue"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_card_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_card_fab"
        app:layout_constraintStart_toStartOf="@+id/add_card_fab"
        app:srcCompat="@drawable/baseline_people_alt_24"
        android:contentDescription="@string/shareMenuItem" />

    <TextView
        android:id="@+id/share_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/share_action_text"
        app:layout_constraintBottom_toBottomOf="@+id/share_fab"
        app:layout_constraintEnd_toStartOf="@+id/share_fab"
        app:layout_constraintTop_toTopOf="@+id/share_fab" />

</androidx.constraintlayout.widget.ConstraintLayout>
