<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/jordy_blue"
        android:src="@drawable/baseline_more_horiz_24"
        app:fabSize="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:contentDescription="@string/ParentMenuButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_course_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/jordy_blue"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_fab"
        app:layout_constraintStart_toStartOf="@+id/add_fab"
        app:srcCompat="@drawable/baseline_add_24"
        android:contentDescription="@string/addCourseMenuItem" />

    <TextView
        android:id="@+id/add_course_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_new_course"
        app:layout_constraintBottom_toBottomOf="@+id/add_course_fab"
        app:layout_constraintEnd_toStartOf="@+id/add_course_fab"
        app:layout_constraintTop_toTopOf="@+id/add_course_fab" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/share_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:backgroundTint="@color/jordy_blue"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_course_fab"
        app:layout_constraintEnd_toEndOf="@+id/add_course_fab"
        app:layout_constraintStart_toStartOf="@+id/add_course_fab"
        app:srcCompat="@drawable/baseline_people_alt_24"
        android:contentDescription="@string/shareMenuItem" />

    <TextView
        android:id="@+id/share_action_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/add_shared_course"
        app:layout_constraintBottom_toBottomOf="@+id/share_fab"
        app:layout_constraintEnd_toStartOf="@+id/share_fab"
        app:layout_constraintTop_toTopOf="@+id/share_fab" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
